# inmoov_ros2

./: README.md  build_and_source.sh
inmoov_description/: CMakeLists.txt  package.xml
inmoov_description/config/: config.yaml  controllers.yaml  inmoov.rviz
inmoov_description/launch/: display.launch.py  gazebo.launch.py
inmoov_description/robots/: inmoov.urdf.xacro  inmoov_face.urdf.xacro  inmoov_head.urdf.xacro  inmoov_right_hand.urdf.xacro
inmoov_description/scripts/: slider.py
inmoov_description/urdf/: asmArm.urdf.xacro  asmEye.urdf.xacro  asmFace.urdf.xacro  asmHand.urdf.xacro  asmHead.urdf.xacro  asmTorso.urdf.xacro  config.inertial.urdf.xacro  config.joints.urdf.xacro  inmoov.gazebo  inmoov.gazebo.xacro
inmoov_tools/: CMakeLists.txt
